Chore: fix dropdown font on mobile

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -291,18 +291,22 @@ body {
       }
 
       h3 {
+        margin-top: 10px;
+        font-size: 16px;
         font-family: "neuzeit_grotesk_regular";
-        font-size: 18px;
+        font-weight: normal;
 
         @media screen and (min-width: $large-phone) {
           font-size: 22px;
           font-weight: bold;
+          margin-top: 20px;
         }
       }
 
       p {
-        font-family: "sf_display_regular";
-        font-size: 17px;
+        font-size: 16px;
+        font-family: "neuzeit_grotesk_regular";
+        font-weight: normal;
       }
     }
   }
